<resources>
    <string name="app_name">Marketplace</string>
    <string name="login_logo_content_description">Marketplace logo</string>
    <string name="login_title">Sign In</string>
    <string name="login_subtitle">Hi there! Nice to see you again.</string>
    <string name="login_email">Email</string>
    <string name="login_email_hint">john.doe@example.com</string>
    <string name="login_password">Password</string>
    <string name="login_password_hint" translatable="false">********</string>
    <string name="login_submit_button">Sign In</string>
    <string name="login_register_button">Don\'t you have an account? <b>Register</b></string>
    <string name="login_error_email">Email is required</string>
    <string name="login_error_password">Password is required</string>
    <string name="login_error_authentication_failed">Authentication failed, please verify your email and password</string>
    <string name="login_error_user_not_found">User not found</string>
    <string name="register_title">Register</string>
    <string name="register_first_name">First name</string>
    <string name="register_first_name_hint">John</string>
    <string name="register_last_name">Last name</string>
    <string name="register_last_name_hint">Doe</string>
    <string name="register_email">Email</string>
    <string name="register_email_hint">john.doe@example.com</string>
    <string name="register_password">Password</string>
    <string name="register_password_hint" translatable="false">********</string>
    <string name="register_checkbox">"Accept our "</string>
    <string name="register_terms_and_conditions"><b>Terms and conditions</b></string>
    <string name="register_submit_button">Register</string>
    <string name="register_error_first_name">First name is required</string>
    <string name="register_error_last_name">Last name is required</string>
    <string name="register_error_email">Email is required</string>
    <string name="register_error_password">Password is required</string>
    <string name="register_error_authentication_failed">Authentication failed</string>
    <string name="terms_and_conditions_title">Terms and conditions</string>
    <string name="terms_and_conditions_introduction" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget augue at nibh ullamcorper tristique. Nunc quis nulla id velit ultrices fermentum hendrerit sit amet nisi. In bibendum vel quam sit amet ullamcorper. Nunc aliquam quis leo ut lobortis. Fusce auctor massa ante, quis cursus est venenatis non. Morbi in tristique dui. In pretium justo at urna rhoncus pretium. In dapibus urna quis elit semper consequat. Aenean volutpat, odio ac pharetra finibus, mauris metus cursus purus, ac ultricies lectus nisi id massa. Pellentesque lobortis facilisis maximus. Donec viverra pellentesque arcu, condimentum malesuada enim tempus bibendum.</string>
    <string name="terms_and_conditions_body" translatable="false">Praesent ornare placerat odio ac pulvinar. Etiam in enim nec neque varius dictum. Suspendisse in ligula at massa tempor facilisis. Nulla facilisi. Maecenas suscipit purus quis lectus auctor, non viverra enim auctor. Aliquam aliquet neque dolor, et convallis ligula ullamcorper ut. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus tincidunt ipsum augue, eget sollicitudin nisi pulvinar sed. Pellentesque sit amet consequat odio. Praesent nec hendrerit nisi, aliquam aliquam ligula.</string>
    <string name="terms_and_conditions_conclusion" translatable="false">Morbi pharetra tincidunt risus, vel auctor ante dapibus ac. Donec quis elementum sapien, bibendum placerat eros. Integer feugiat elit a ultricies lobortis. Nam fringilla viverra nulla, eget lacinia nibh. Nulla dignissim ac urna ut sollicitudin. Nulla a vehicula diam. Suspendisse potenti.</string>
    <string name="progress_dialog_title">Loading</string>
    <string name="progress_dialog_message_registering">Registering user</string>
    <string name="progress_dialog_message_logging_in">Logging in</string>
    <string name="progress_dialog_message_image_uploading">Uploading image</string>
    <string name="progress_dialog_message_product_saving">Saving product</string>
    <string name="progress_dialog_message_generating_payment">Generating payment</string>
    <string name="alert_dialog_message_register_confirm">Registered user. Sign in with your email and password.</string>
    <string name="alert_dialog_positive_button_register_confirm">OK</string>
    <string name="floating_action_button_home_add_products">Add product</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_cart">Cart</string>
    <string name="add_product_title">Add Product</string>
    <string name="add_product_name">Name</string>
    <string name="add_product_name_hint" translatable="false">OnePlus 9 Pro Morning Mist</string>
    <string name="add_product_name_error">Product name is required</string>
    <string name="add_product_brand">Brand</string>
    <string name="add_product_brand_hint" translatable="false">OnePlus</string>
    <string name="add_product_brand_error">Product brand is required</string>
    <string name="add_product_category">Category</string>
    <string name="add_product_category_hint">Cell Phones</string>
    <string name="add_product_category_error">Product category is required</string>
    <string name="add_product_price">Price</string>
    <string name="add_product_price_hint" translatable="false">4700000</string>
    <string name="add_product_price_error">Product price is required</string>
    <string name="add_product_description">Description</string>
    <string name="add_product_description_hint">Write a description of your product</string>
    <string name="add_product_description_error">Product description is required</string>
    <string name="add_product_photo">Photo</string>
    <string name="add_product_photo_error">Error picking photo</string>
    <string name="add_product_photo_error_upload">Error picking photo</string>
    <string name="add_product_save">Save</string>
    <string name="add_product_success">Product added successfully</string>
    <string name="add_product_success_button">OK</string>
    <string name="add_product_error">ERROR adding product</string>
    <string name="add_product_error_button">Cancel</string>
    <string name="product_list_image_description">Product image</string>
    <string name="product_list_favorite_description">Add to favorites</string>
    <string name="product_list_cart_description">Add to cart</string>
    <string name="product_list_success_add_to_favorite">Added to favorites</string>
    <string name="product_list_success_remove_from_favorite">Removed from favorites</string>
    <string name="product_list_success_add_to_cart">Added to cart</string>
    <string name="product_list_success_remove_from_cart">Removed from cart</string>
    <string name="cart_title">Cart</string>
    <string name="cart_total">Total:</string>
    <string name="cart_pay">Pay</string>
    <string name="nav_header_image_description">Person icon</string>
    <string name="menu_favorites">Favorites</string>
    <string name="favorites_title">Favorites</string>
    <string name="favorites_text">You have not added favorites yet</string>
    <string name="product_description_see_location">See location</string>
    <string name="title_activity_maps">Map</string>
</resources>