<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/product_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_product_name_hint"
                android:inputType="textCapSentences"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_brand"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/product_brand_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_product_brand_hint"
                android:inputType="textCapSentences"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_category"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/product_category_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_product_category_hint"
                android:inputType="textCapSentences"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_price"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/product_price_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_product_price_hint"
                android:inputType="number"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_description"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/product_description_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/add_product_description_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:minLines="3"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_photo"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/product_photo_image_button"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_add_photo" />

        </LinearLayout>

        <Button
            android:id="@+id/add_product_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_product_save"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>